force-app/main/default/objects/STAGE_PERSON__c/STAGE_PERSON__c.object-meta.xml
<CustomObject>
    <description>STAGING represention of Persons.CSV</description>
    <label>STAGE_PERSON</label>
    <nameField>
        <displayFormat>stg-p-{0000}</displayFormat>
        <label>STAGE_PERSONS Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>STAGE_PERSONS</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>