force-app/main/default/objects/STAGE_PERSON__c/fields/FIRSTNAME__c.field-meta.xml
<CustomField>
    <fullName>FIRSTNAME__c</fullName>
    <description>FIRSTNAME from CSV</description>
    <label>FIRSTNAME</label>
    <length>60</length>
    <required>true</required>
    <type>Text</type>
</CustomField>