force-app/main/default/objects/STAGE_PERSON__c/fields/LASTNAME__c.field-meta.xml
<CustomField>
    <fullName>LASTNAME__c</fullName>
    <description>LASTNAME</description>
    <label>LASTNAME</label>
    <length>60</length>
    <required>true</required>
    <type>Text</type>
</CustomField>