force-app/main/default/objects/STAGE_PERSON__c/fields/MM_MEMBERID__c.field-meta.xml
<CustomField>
    <fullName>MM_MEMBERID__c</fullName>
    <description>MM MemberID external ID field</description>
    <externalId>true</externalId>
    <label>MM_MEMBERID</label>
    <length>40</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>