force-app/main/default/objects/STAGE_PERSON__c/fields/RTNAME__c.field-meta.xml
<CustomField>
    <fullName>RTNAME__c</fullName>
    <description>Target RecordType Name</description>
    <label>RTNAME</label>
    <length>60</length>
    <required>true</required>
    <type>Text</type>
</CustomField>